--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,12 @@
     "bootstrap": "^4.4.1",
     "graphql": "^16.5.0",
     "jwt-decode": "^2.2.0",
+    "moesif-nodejs": "^3.2.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
